--- a/server/ApiGateway/nginx.conf
+++ b/server/ApiGateway/nginx.conf
@@ -5,7 +5,7 @@ server
     
     location /api/v1/auth {
         rewrite ^/api/v1/auth/(.*) /api/v1/$1  break;
-        proxy_pass http://192.168.1.33:8001;
+        proxy_pass http://user-services:8001;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -22,7 +22,7 @@ server
 
     location /api/v1/products {
         rewrite ^/api/v1/products/(.*) /api/v1/$1  break;
-        proxy_pass http://192.168.1.33:8002;
+        proxy_pass http://product-services:8002;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
