--- a/server/UserService/Dockerfile.dev
+++ b/server/UserService/Dockerfile.dev
@@ -5,6 +5,7 @@ FROM node:16-alpine as base
 ENV NODE_ENV=development
 RUN mkdir /app
 EXPOSE 8001
+EXPOSE 8101
 WORKDIR /app
 USER root
 COPY  package.json yarn.lock ./
