--- a/client/Udemy-Ecommerce-Clone-Frontend-/package.json
+++ b/client/Udemy-Ecommerce-Clone-Frontend-/package.json
@@ -13,8 +13,9 @@
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.67.0",
