--- a/client/Udemy-Ecommerce-Clone-Frontend-/package.json
+++ b/client/Udemy-Ecommerce-Clone-Frontend-/package.json
@@ -6,9 +6,11 @@
     "@chakra-ui/react": "^2.8.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.0",
     "chakra-paginator": "^0.7.3",
     "framer-motion": "^10.16.4",
     "moment": "^2.29.4",
@@ -16,6 +18,7 @@
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.67.0",
