--- a/server/SocketService/Dockerfile
+++ b/server/SocketService/Dockerfile
@@ -2,8 +2,7 @@ FROM node:16-alpine
 RUN mkdir -p /app
 WORKDIR /app
 COPY package.json ./
-RUN npm i 
-RUN npm install
+RUN npm i -f
 RUN npm install -g nodemon
 COPY . .
 EXPOSE 8001
