--- a/server/ProductService/package.json
+++ b/server/ProductService/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.10",
     "@nestjs/typeorm": "^10.0.0",
+    "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "crypto": "^1.0.1",
     "moment": "^2.29.4",
     "nestjs-i18n": "^10.3.1",
     "pg": "^8.11.3",
